corrected links to each other

--- a/finnScripts/finnMain.html
+++ b/finnScripts/finnMain.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/finnSite/finnStyles.css">
+    <link rel="stylesheet" href="/finnStyles/finnMainStyle.css">
     <title>Finn</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <h1>Finn</h1>
     </header>
     <section class="finnpose">
-        <img src="Finn/File_030.png" alt="finn pose">
+        <img src="/finnImages/File_030.png" alt="finn pose">
     </section>
     <section class="finnstats">
         <h2>Stats</h2>
@@ -23,7 +23,7 @@
         </ul>
     </section>
     
-    <img class="deez" src="Finn/File_040.jpeg" alt="finn stare">
+    <img class="deez" src="/finnImages/File_040.jpeg" alt="finn stare">
 </body>
 </html>
 
